--- a/index.html
+++ b/index.html
@@ -43,12 +43,15 @@
     </header>
     <main>
         <!--Герой-->
-        <section class="hero container">
+        <section class="hero">
+            <div class="container">
             <h1 class="title">Эффективные решения для вашего бизнеса</h1>
             <button class="hero-button btn" type="button">Заказать услугу</button>
+            </div>
         </section>
         <!--Секция 1 "качества"-->
-        <section class="section-qualities container">
+        <section class="section-qualities">
+            <div class="container">
             <h2 class="header-section-qualities">Мы гарантируем</h2>
             <ul class="qualities-list list">
                 <li class="qualities-list-item">
@@ -68,9 +71,11 @@
                     <p class="qualities-list-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
+        </div>
         </section>
         <!--Секция 2 "Услуги"-->
-        <section class="section-services container">
+        <section class="section-services">
+            <div class="container">
             <h2 class="header-section">Чем мы занимаемся</h2>
             <ul class="services-list list">
                 <li class="services-list">
@@ -82,10 +87,12 @@
                 <li class="services-list">
                     <img src="./image/Designer.jpg" alt="Дизайн" width="370" class="service-img" />
                 </li>
+            </div>
             </ul>
         </section>
         <!--Секция 3 "Команда"-->
-        <section class="section-team container">
+        <section class="section-team">
+            <div class="container">
             <h2 class="header-section">Наша команда</h2>
             <ul class="team-list list">
                 <li class="team-list-item">
@@ -109,8 +116,10 @@
                     <p class="position ">UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
-        <footer class="footer container">
+        <footer class="footer">
+            <div class="container">
             <a class="link logo" href="/">Web<span class="footer-part-logo">Studio</span></a>
             <address class="footer-address">
                 <ul class="address-list list">
@@ -122,6 +131,7 @@
                         <a class="address-list-item link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
+        </div>
         </footer>
 
     </main>
