Доработать последнюю секцию

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,29 +18,32 @@
 <body class="body">
     <!--Навигация и контакты-->
     <header class="header">
-        <a class="link logo" href="/">Web<span class="part-logo">Studio</span></a>
-        <nav class="navigation">
-            <ul class="nav-list list">
-                <li class="nav-list-item">
-                    <a class="link" href="./index.html">Студия</a>
-                </li>
-                <li class="nav-list-item">
-                    <a class="link current" href="./portfolio.html">Портфолио</a>
-                </li>
-                <li class="nav-list-item">
-                    <a class="link" href="">Контакты</a>
-                </li>
-            </ul>
-        </nav>
-        <ul class="contacts list">
-            <li class="contacts-item">
-                <a class="link contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="contacts-item">
-                <a class="link contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-        </ul>
-    
+        <div class="container header-container">
+            <nav class="navigation">
+                <a class="link logo" href="/">Web<span class="part-logo">Studio</span></a>
+                <ul class="nav-list list">
+                    <li class="nav-list-item">
+                        <a class="link current" href="./index.html">Студия</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a class="link" href="./portfolio.html">Портфолио</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a class="link" href="">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="">
+                <ul class="contacts list">
+                    <li class="contacts-item">
+                        <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="contacts-item">
+                        <a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </header>
     <section class="section-projects">
         <ul class="filters-list list">
