--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 <body class="body">
     <!--Навигация и контакты-->
-    <header class="header">
-        <div class="container header-container" </div>
-        <a class="link logo" href="/">Web<span class="part-logo">Studio</span></a>
+    <header class="header">   
+        <div class="container header-container">              
         <nav class="navigation">
+            <a class="link logo" href="/">Web<span class="part-logo">Studio</span></a>
             <ul class="nav-list list">
                 <li class="nav-list-item">
                     <a class="link current" href="./index.html">Студия</a></li>
@@ -43,10 +43,10 @@
     </header>
     <main>
         <!--Герой-->
-        <section class="hero">
+        <section class="hero">     
             <div class="container">
-            <h1 class="title">Эффективные решения для вашего бизнеса</h1>
-            <button class="hero-button btn" type="button">Заказать услугу</button>
+            <h1 class="title">Эффективные решения <br>для вашего бизнеса</h1>
+            <button class="hero-button btn" type="button">Заказать услугу</button> 
             </div>
         </section>
         <!--Секция 1 "качества"-->
@@ -78,13 +78,13 @@
             <div class="container">
             <h2 class="header-section">Чем мы занимаемся</h2>
             <ul class="services-list list">
-                <li class="services-list">
+                <li class="services-list-item">
                     <img src="./image/FrontEnd.jpg" alt="ФронтЕнд" width="370" class="service-img" />
                 </li>
-                <li class="services-list">
+                <li class="services-list-item">
                     <img src="./image/Marketing.jpg" alt="Маркетинг" width="370" class="service-img" />
                 </li>
-                <li class="services-list">
+                <li class="services-list-item">
                     <img src="./image/Designer.jpg" alt="Дизайн" width="370" class="service-img" />
                 </li>
             </div>
@@ -95,22 +95,22 @@
             <div class="container">
             <h2 class="header-section">Наша команда</h2>
             <ul class="team-list list">
-                <li class="team-list-item">
+                <li class="team-list-item team-border">
                     <img src="./image/IgorDemyanenko.jpg" alt="Дизайнер" width="270" class="team-img" />
                     <h3 class="names">Игорь Демьяненко</h3>
                     <p class="position ">Product Designer</p>
                 </li>
-                <li class="team-list-item">
+                <li class="team-list-item team-border">
                     <img src="./image/OlgaRepina.jpg" alt="Фронтенд разработчик" width="270" class="team-img" />
                     <h3 class="names">Ольга Репина</h3>
                     <p class="position ">Frontend Developer</p>
                 </li>
-                <li class="team-list-item">
+                <li class="team-list-item team-border">
                     <img src="./image/NikolaiTarasov.jpg" alt="Маркетинг" width="270" class="team-img" />
                     <h3 class="names">Николай Тарасов</h3>
                     <p class="position ">Marketing</p>
                 </li>
-                <li class="team-list-item">
+                <li class="team-list-item team-border">
                     <img src="./image/MikhailErmakov.jpg" alt="Дизайнер интерфейсов" width="270" class="team-img" />
                     <h3 class="names">Михаил Ермаков</h3>
                     <p class="position ">UI Designer</p>
@@ -123,12 +123,12 @@
             <a class="link logo" href="/">Web<span class="footer-part-logo">Studio</span></a>
             <address class="footer-address">
                 <ul class="address-list list">
-                    <li>
+                    <li class="address-list-item">
                         <a class="address-list-location link" href="https://goo.gl/maps/WCJeutTfx12b1jP4A">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li>
-                        <a class="address-list-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li>
-                        <a class="address-list-item link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li class="address-list-item">
+                        <a class="address-list-text link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="address-list-item">
+                        <a class="address-list-text link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
