Завершена робота з розмірами та позиціями обєктів

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,7 @@
         </div>
     </header>
     <section class="section-projects">
+        <div class="container">
         <ul class="filters-list list">
             <li class="filters-list-item">
                 <button class="filters-btn btn" type="button">Все</button></li>
@@ -106,22 +107,25 @@
                 <p class="projects-text">Приложение</p>
             </li>
         </ul>
+        </div>
     </section>
 <footer class="footer">
-    <a class="link logo" href="/">Web<span class="footer-part-logo">Studio</span></a>
-    <address class="footer-address">
-        <ul class="address-list list">
-            <li>
-                <a class="address-list-location link" href="https://goo.gl/maps/WCJeutTfx12b1jP4A">г. Киев, пр-т Леси
-                    Украинки, 26</a>
-            </li>
-            <li>
-                <a class="address-list-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a class="address-list-item link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-        </ul>
-    </address>
+    <div class="container">
+        <a class="link logo" href="/">Web<span class="footer-part-logo">Studio</span></a>
+        <address class="footer-address">
+            <ul class="address-list list">
+                <li class="address-list-item">
+                    <a class="address-list-location link" href="https://goo.gl/maps/WCJeutTfx12b1jP4A">г. Киев, пр-т
+                        Леси Украинки, 26</a>
+                </li>
+                <li class="address-list-item">
+                    <a class="address-list-text link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="address-list-item">
+                    <a class="address-list-text link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </address>
+    </div>
 </footer>
 </body>
