--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,10 @@
                 <a class="link logo" href="/">Web<span class="part-logo">Studio</span></a>
                 <ul class="nav-list list">
                     <li class="nav-list-item">
-                        <a class="link current" href="./index.html">Студия</a>
+                        <a class="link" href="./index.html">Студия</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="link" href="./portfolio.html">Портфолио</a>
+                        <a class="link current" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="nav-list-item">
                         <a class="link" href="">Контакты</a>
