--- a/index.html
+++ b/index.html
@@ -97,23 +97,31 @@
             <ul class="team-list list">
                 <li class="team-list-item team-border">
                     <img src="./image/IgorDemyanenko.jpg" alt="Дизайнер" width="270" class="team-img" />
+                    <div class="names-position">
                     <h3 class="names">Игорь Демьяненко</h3>
                     <p class="position ">Product Designer</p>
+                    </div>
                 </li>
                 <li class="team-list-item team-border">
                     <img src="./image/OlgaRepina.jpg" alt="Фронтенд разработчик" width="270" class="team-img" />
+                    <div class="names-position">
                     <h3 class="names">Ольга Репина</h3>
                     <p class="position ">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="team-list-item team-border">
                     <img src="./image/NikolaiTarasov.jpg" alt="Маркетинг" width="270" class="team-img" />
+                    <div class="names-position">
                     <h3 class="names">Николай Тарасов</h3>
-                    <p class="position ">Marketing</p>
+                    <p class="position">Marketing</p>
+                    </div>
                 </li>
                 <li class="team-list-item team-border">
                     <img src="./image/MikhailErmakov.jpg" alt="Дизайнер интерфейсов" width="270" class="team-img" />
+                    <div class="names-position">
                     <h3 class="names">Михаил Ермаков</h3>
-                    <p class="position ">UI Designer</p>
+                    <p class="position">UI Designer</p>
+                    </div>
                 </li>
             </ul>
             </div>
